[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/devtools/markers.properties
+++ b/son/browser/chrome/browser/devtools/markers.properties
@@ -119,3 +119,12 @@ marker.gcreason.label.USER_INACTIVE=Goykaw kayante
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
 marker.gcreason.description.API=API ciyari cindi kaŋ na žiibi kurmayan waažibandi.
+marker.gcreason.description.MEM_PRESSURE=Lakkaloo cindi ka hansa ka yalaafu.
+marker.gcreason.description.CC_WAITING=Kuubiri kuunakaa na žiibi kuunayan waažibandi.
+marker.gcreason.description.CC_FORCED=Kuubiri kuunakaa na žiibi kuunayan waažibandi.
+marker.gcreason.description.LOAD_END=Takaddaa zunbu ka ben.
+marker.gcreason.description.PAGE_HIDE=Kanjoo wala zanfunoo n' ka ganandi bandafaaroo ga.
+marker.gcreason.description.NSJSCONTEXT_DESTROY=Firefox na JavaScript dirandi waati wala šilbayboŋ kaa, nda woo ti žiibi kuunayan kokorantaa hal'a ga buu.
+marker.gcreason.description.SET_NEW_DOCUMENT=Moɲoo n' ka berandi takadda taaga foo boŋ.
+marker.gcreason.description.SET_DOC_SHELL=Moɲoo n' ka berandi takadda taaga foo boŋ.
+marker.gcreason.description.DOM_UTILS=API ciyari cindi kaŋ na žiibi kuunayan waažibandi.
