--- a/son/browser/chrome/browser/devtools/performance.properties
+++ b/son/browser/chrome/browser/devtools/performance.properties
@@ -13,6 +13,7 @@
 # LOCALIZATION NOTE (performance.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+performance.label=Teeyan sahã
 
 # LOCALIZATION NOTE (performance.panelLabel):
 # This is used as the label for the toolbox panel.
@@ -21,11 +22,13 @@ performance.panelLabel=Teeyan sahã fasaldoo
 # LOCALIZATION NOTE (performance.commandkey, performance.accesskey)
 # Used for the menuitem in the tool menu
 performance.commandkey=VK_F5
+performance.accesskey=T
 
 # LOCALIZATION NOTE (performance.tooltip):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
 # Keyboard shortcut for Performance Tools will be shown inside brackets.
+performance.tooltip=Teeyan sahã ((%S)
 
 # LOCALIZATION NOTE (noRecordingsText): The text to display in the
 # recordings menu when there are no recorded profiles yet.
@@ -50,6 +53,7 @@ recordingsList.loadingLabel=Goo ma zumandi…
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Performance Tools,
 # for an item that has finished recording.
+recordingsList.durationLabel=%S ms
 
 # LOCALIZATION NOTE (recordingsList.saveLabel):
 # This string is displayed in the recordings list of the Performance Tools,
@@ -66,6 +70,7 @@ graphs.fps=fps
 # This string is displayed in the flamegraph of the Performance Tools,
 # as the unit used to measure time (in milliseconds). This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.ms=ms
 
 # LOCALIZATION NOTE (graphs.memory):
 # This string is displayed in the memory graph of the Performance tool,
