[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/devtools/performance.properties
+++ b/son/browser/chrome/browser/devtools/performance.properties
@@ -94,9 +94,11 @@ category.tools=Goyjinawey
 
 # LOCALIZATION NOTE (table.ms):
 # This string is displayed in the call tree after units of time in milliseconds.
+table.ms=ms
 
 # LOCALIZATION NOTE (table.percentage):
 # This string is displayed in the call tree after units representing percentages.
+table.percentage=%
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -123,9 +125,11 @@ table.view-optimizations.tooltiptext=Boryandiyaney guna JIT gunari ra
 
 # LOCALIZATION NOTE (recordingsList.importDialogTitle):
 # This string is displayed as a title for importing a recoring from disk.
+recordingsList.importDialogTitle=Jišiyan zaa…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Jišiyan gaabu…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
@@ -154,6 +158,7 @@ jit.empty=JIT boryandiyan kul mana jisandi kungaa woo se.
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
 # by time, in milliseconds.
+timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
@@ -165,3 +170,4 @@ timeline.records=JIŠIREY
 # %S is the percentage of the buffer used -- there are two "%"s after to escape
 # the % that is actually displayed.
 # Example: "Buffer 54% full"
+profiler.bufferFull=Furgame too nda %S%%
