[az] update from Pootle (firefox)

--- a/az/services/sync/sync.properties
+++ b/az/services/sync/sync.properties
@@ -10,6 +10,7 @@ lastSync2.label = Son sinxronizasiya: %S
 
 # signInToSync.description is the tooltip for the Sync buttons when Sync is
 # not configured.
+signInToSync.description = Sinxronlaşdırmaq üçün daxil olun
 
 mobile.label = Mobil Əlfəcinlər
 
