--- a/az/browser/chrome/browser/browser.properties
+++ b/az/browser/chrome/browser/browser.properties
@@ -333,6 +333,7 @@ identity.unknown.tooltip=Bu saytın kimlik məlumatı yoxdur.
 
 trackingProtection.intro.title=İzlənmə Qoruması necə işləyir
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Qalxan görünürsə, bu, Firefox sizi izləyən məzmunu aktiv bir şəkildə bloklayır deməkdir.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
 trackingProtection.intro.step1of3=1 / 3
 trackingProtection.intro.nextButton.label=Sonrakı
@@ -554,7 +555,10 @@ getUserMedia.shareCamera.message = Kameranızı %S ilə paylaşmaq istəyirsiniz
 getUserMedia.shareMicrophone.message = Mikrofonunuzu %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.shareScreen.message = Ekranınızı %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.shareCameraAndMicrophone.message = Kamera və mikrofonunuzu %S ilə paylaşmaq istəyirsiniz?
+getUserMedia.shareCameraAndAudioCapture.message = Kameranızı və bu vərəqin səsini %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.shareScreenAndMicrophone.message = Mikrofon və ekranınızı %S ilə paylaşmaq istəyirsiniz?
+getUserMedia.shareScreenAndAudioCapture.message = Bu vərəqin səsini və ekranınızı %S ilə paylaşmaq istəyirsiniz?
+getUserMedia.shareAudioCapture.message = Bu vərəqin səsini %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.selectWindow.label=Paylaşılacaq pəncərə:
 getUserMedia.selectWindow.accesskey=p
 getUserMedia.selectScreen.label=Paylaşılacaq pəncərə:
@@ -570,6 +574,7 @@ getUserMedia.shareEntireScreen.label = Bütün ekran
 # LOCALIZATION NOTE (getUserMedia.shareMonitor.label):
 # %S is screen number (digits 1, 2, etc)
 # Example: Screen 1, Screen 2,..
+getUserMedia.shareMonitor.label = Ekran %S
 # LOCALIZATION NOTE (getUserMedia.shareApplicationWindowCount.label):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -599,6 +604,7 @@ getUserMedia.sharingApplication.message = Siz hal-hazırda bu səhifə ilə proq
 getUserMedia.sharingScreen.message = Siz hal-hazırda ekranınızı bu səhifə ilə paylaşırsınız.
 getUserMedia.sharingWindow.message = Siz hal-hazırda bu səhifə ilə pəncərə paylaşırsınız.
 getUserMedia.sharingBrowser.message = Siz hal-hazırda bu səhifə ilə vərəq paylaşırsınız.
+getUserMedia.sharingAudioCapture.message = Hazırda bu səhifə ilə vərəqin səsini paylaşırsınız.
 getUserMedia.continueSharing.label = Paylaşmağa Davam et
 getUserMedia.continueSharing.accesskey = D
 getUserMedia.stopSharing.label = Paylaşmağı Durdur
@@ -638,7 +644,8 @@ getUserMedia.sharingMenu.accesskey = c
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamera)
 getUserMedia.sharingMenuMicrophone = %S (mikrafon)
-getUserMedia.sharingMenuApplication = %S (proqram)
+getUserMedia.sharingMenuAudioCapture = %S (vərəq səsi)
+getUserMedia.sharingMenuApplication = %S (tətbiqetmə)
 getUserMedia.sharingMenuScreen = %S (ekran)
 getUserMedia.sharingMenuWindow = %S (pəncərə)
 getUserMedia.sharingMenuBrowser = %S (vərəq)
@@ -647,6 +654,11 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon və p
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon və ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon və pəncərə)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (kamera, mikrofon və vərəq)
+getUserMedia.sharingMenuCameraAudioCapture = %S (kamera və vərəq səsi)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (kamera, vərəq səsi və tətbiqetmə)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (kamera, vərəq səsi və ekran)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (kamera, vərəq səsi və pəncərə)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (kamera, vərəq səsi və vərəq)
 getUserMedia.sharingMenuCameraApplication = %S (kamera və proqram)
 getUserMedia.sharingMenuCameraScreen = %S (kamera və ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamera və pəncərə)
@@ -656,6 +668,9 @@ getUserMedia.sharingMenuMicrophoneScreen = %S (mikrafon və ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrafon və pəncərə)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (mikrofon və vərəq)
 getUserMedia.sharingMenuAudioCaptureApplication = %S (vərəq səsi və tətbiq)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (vərəq səsi və ekran)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (vərəq səsi və pəncərə)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (vərəq səsi və vərəq)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Naməlum mənşə
@@ -761,3 +776,7 @@ e10s.accessibilityNotice.disableAndRestart.accesskey = Y
 e10s.accessibilityNotice.dontDisable.label = Deaktiv Etmə
 e10s.accessibilityNotice.dontDisable.accesskey = E
 
+muteTab.label = Vərəqi Səsini qapat
+muteTab.accesskey = p
+unmuteTab.label = Vərəqin Səsini aç
+unmuteTab.accesskey = a
