[son] update from Pootle (firefox-beta)

--- a/son/browser/chrome/browser/devtools/webide.properties
+++ b/son/browser/chrome/browser/devtools/webide.properties
@@ -83,3 +83,4 @@ device_reset_default=Yeeti tilasu ga
 
 # Simulator options
 simulator_custom_device=Hanse war boŋ se
+simulator_default_profile=Tilasu goyandi
