[az] update from Pootle (firefox)

--- a/az/dom/chrome/accessibility/AccessFu.properties
+++ b/az/dom/chrome/accessibility/AccessFu.properties
@@ -75,10 +75,30 @@ definitionlist =       təsvir siyahısı
 term           =       termin
 definition     =       təsvir
 
+mathmltable              = riyaziyyat cədvəli
+mathmlcell               = xana
+mathmlenclosed           = qapalı
+mathmlfraction           = kəsr
+mathmlfractionwithoutbar = çubuqsuz kəsr
+mathmlroot               = kök
+mathmlscripted           = skriptləşdirilmiş
+mathmlsquareroot         = kök altı
 
 # More sophisticated roles which are not actual numeric roles
 textarea       =       mətn sahəsi
 
+base           =       zəmin
+close-fence    =       qapanan çəpər
+denominator    =       bölən
+numerator      =       bölünən
+open-fence     =       açılan çəpər
+overscript     =       üst skript
+presubscript   =       ön alt skript
+presuperscript =       ön üst skript
+root-index     =       kök indeksi
+subscript      =       alt skript
+superscript    =       üst skript
+underscript    =       alt skript
 
 # Text input types
 textInputType_date   =       tarix
@@ -195,6 +215,23 @@ quicknav_Checkbox    = İşarətləmə qutuları
 
 # MathML menclose notations.
 # See developer.mozilla.org/docs/Web/MathML/Element/menclose#attr-notation
+notation-longdiv            = uzun bölmə
+notation-actuarial          = akturial
+notation-phasorangle        = kompleks amplitud bucağı
+notation-radical            = radikal
+notation-box                = qutu
+notation-roundedbox         = dairəvi qutu
+notation-circle             = dairə
+notation-left               = sol
+notation-right              = sağ
+notation-top                = üst
+notation-bottom             = alt
+notation-updiagonalstrike   = üst diaqonal strayk
+notation-downdiagonalstrike = alt diaqonal strayk
+notation-verticalstrike     = dik strayk
+notation-horizontalstrike   = üfüqi strayk
+notation-updiagonalarrow    = üst diaqonal ox
+notation-madruwb            = madruwb
 
 # Shortened role names for braille
 menubarAbbr        =       menyu paneli
@@ -208,6 +245,7 @@ dialogAbbr         =       dialoq
 separatorAbbr      =       ayırıcı
 toolbarAbbr        =       alət sətri
 statusbarAbbr      =       vəziyyət sətri
+tableAbbr          =       cdv
 columnheaderAbbr   =       sütun başlığı
 rowheaderAbbr      =       sətir başlığı
 columnAbbr         =       sütun
@@ -279,6 +317,42 @@ stateUncheckedAbbr = ( )
 statePressedAbbr = (x)
 stateUnpressedAbbr = ( )
 
+mathmlenclosedAbbr           = bağlanıb
+mathmltableAbbr              = cdv
+mathmlcellAbbr               = xana
+mathmlfractionAbbr           = kəsr
+mathmlfractionwithoutbarAbbr = xətsiz kəst
+mathmlrootAbbr               = kök
+mathmlscriptedAbbr           = skriptləş
+mathmlsquarerootAbbr         = kökaltı
 
+baseAbbr           = baza
+close-fenceAbbr    = bağla
+denominatorAbbr    = bölünən
+numeratorAbbr      = bölünən
+open-fenceAbbr     = açıq
+overscriptAbbr     = üst
+presubscriptAbbr   = ön alt
+presuperscriptAbbr = ön üst
 root-indexAbbr     = indeks
+subscriptAbbr      = alt
+superscriptAbbr    = üst
+underscriptAbbr    = altında
 
+notation-longdivAbbr            = uzundiv
+notation-actuarialAbbr          = akt
+notation-phasorangleAbbr        = komp ampl
+notation-radicalAbbr            = rad
+notation-boxAbbr                = qutu
+notation-roundedboxAbbr         = dairəvi qutu
+notation-circleAbbr             = dairə
+notation-leftAbbr               = sol
+notation-rightAbbr              = sağ
+notation-topAbbr                = üst
+notation-bottomAbbr             = alt
+notation-updiagonalstrikeAbbr   = üstdiaqstrayk
+notation-downdiagonalstrikeAbbr = altdiaqstrayk
+notation-verticalstrikeAbbr     = dikstrayk
+notation-horizontalstrikeAbbr   = üfüqstrayk
+notation-updiagonalarrowAbbr    = üstdiaqox
+notation-madruwbAbbr            = madruwb
