--- a/az/dom/chrome/xslt/xslt.properties
+++ b/az/dom/chrome/xslt/xslt.properties
@@ -33,6 +33,7 @@
 29 = Müvazinətsiz buruq burğu.
 30 = Etibarsız QName sahibi bir komponent yaradılır.
 31 = Eyni şablondakı dəyişkən bağlama, dəyişkən bağlamanı kölgələyir.
+32 = Açar funksiyaya çağırışa icazə verilmir.
 
 LoadingError = Stylesheet yüklənməsində səhv: %S
 TransformError = XSLT çevrilməsində səhv: %S
