--- a/az/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/az/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -6,7 +6,14 @@ rememberValue = Bu dəyəri yadda saxlamaq üçün şifrə idarəçisindən isti
 rememberPassword = Bu şifrəni yadda saxlamaq üçün şifrə idarəçisindən istifadə edin.
 savePasswordTitle = Təsdiqlə
 # LOCALIZATION NOTE (rememberLoginMsg, rememberLoginMsgNoUser): %S is brandShortName
+rememberLoginMsg = %S bu hesabı yadda saxlasın?
+rememberLoginMsgNoUser = %S bu parolu yadda saxlasın?
+rememberLoginButtonText = Yadda saxla
+rememberLoginButtonAccessKey = S
+updateLoginMsg = Bu hesabı yeniləmək istəyirsiniz?
+updateLoginMsgNoUser = Bu şifrəni yeniləmək istəyirsinizmi?
 updateLoginButtonText = Yeniləmə
+updateLoginButtonAccessKey = Y
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname. 
 # Note that long usernames may be truncated.
@@ -16,6 +23,7 @@ rememberPasswordMsg = %2$S saytındakı "%1$S" üçün olan şifrəni yadda saxl
 rememberPasswordMsgNoUsername = %S -də şifrənizi saxlamaq istəyirsiniz mi?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
+noUsernamePlaceholder=İstifadəçi adı yoxdur
 # LOCALIZATION NOTE (showPasswordPlaceholder):
 # This is displayed in the password field to indicate that the password will be
 # shown if focused.
@@ -28,12 +36,14 @@ notifyBarNeverRememberButtonText = Bu Sayt Üçün Olan Şifrələri Heç Vaxt Y
 notifyBarNeverRememberButtonAccessKey = e
 rememberButtonText = &Yadda Saxla
 notifyBarRememberPasswordButtonText = Şifrəni Yadda Saxla
+notifyBarRememberPasswordButtonAccessKey = R
 passwordChangeTitle = Şifrə dəyişikliyini təsdiqləyin
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
 updatePasswordMsg = "%S" üçün yadda saxlanmış şifrəni yeniləmək istəyirsinizmi?
 updatePasswordMsgNoUser = Yadda Saxlanmış şifrəni yeniləmək istəyirsinizmi?
 notifyBarUpdateButtonText = Şifrəni Yenilə
+notifyBarUpdateButtonAccessKey = Y
 notifyBarDontChangeButtonText = Dəyişdirmə
 notifyBarDontChangeButtonAccessKey = D
 userSelectText = Zəhmət olmasa hansı istifadəçi üçün şifrəni dəyişdiyinizi təsdiqləyin
@@ -44,9 +54,16 @@ showPasswordsAccessKey=P
 noMasterPasswordPrompt=Şifrələrinizi göstərmək istədiyinizə əminsinizmi?
 removeAllPasswordsPrompt=Bütün şifrələri silmək istədiyinizə əminsinizmi?
 removeAllPasswordsTitle=Bütün şifrələri sil
+removeLoginPrompt=Bu hesabı silmək istədiyinizə əminsiniz?
+removeLoginTitle=Hesabı sil
+loginsDescriptionAll=Bu saytlar üçün olan hesablarınız kompüterinizdə saxlanılır:
+loginsDescriptionFiltered=Aşağıdakı hesablar axtarışınıza uyğun gəlir:
 # LOCALIZATION NOTE (loginHostAge):
 # This is used to show the context menu login items with their age.
 # 1st string is the username for the login, 2nd is the login's age.
 loginHostAge=%1$S (%2$S)
 # LOCALIZATION NOTE (noUsername):
 # String is used on the context menu when a login doesn't have a username.
+noUsername=İstifadəçi adı yoxdur
+duplicateLoginTitle=Hesab artıq mövcuddur
+duplicateLogin=Təkrar hesab artıq mövcuddur.
