[mai] update from Pootle (firefox-beta)

--- a/mai/browser/chrome/browser/accounts.properties
+++ b/mai/browser/chrome/browser/accounts.properties
@@ -5,23 +5,36 @@
 # LOCALIZATION NOTE (needUserShort)
 # %S = Firefox Accounts brand name from syncBrand.dtd
 needUserShort = सिंक खातिर %S केर जरूरत
+needUserLong = हम सिंक सभक लेल आसान बनाबै कलेल पुनःनिर्मित कएने छी. कृपया Firefox खाता केँ सिंकिंग जारी राखए कलेल उन्नयन करू.
 
 upgradeToFxA.label = Upgrade
 upgradeToFxA.accessKey = U
 
 # LOCALIZATION NOTE (signInAfterUpgradeOnOtherDevice.description)
 # %S = Email address of user's Firefox Account
+signInAfterUpgradeOnOtherDevice.description = सिंक%S द्वारा एक आओर डिवाइस पर उन्नत बनाओल गेल छला. सिंक्रनाइज़ कएनाए फेन सँ आरंभ करू?
 signInAfterUpgradeOnOtherDevice.label = साइन इन (S)
 signInAfterUpgradeOnOtherDevice.accessKey = S
 
 # LOCALIZATION NOTE (needVerifiedUserShort, needVerifiedUserLong)
 # %S = Email address of user's Firefox Account
+needVerifiedUserShort = %S सत्यापित नहि अछि
+needVerifiedUserLong = %S केँ पठाएल गेल इमेलमे सत्यापन लिंक केँ क्लिक करू
 
+resendVerificationEmail.label = फेर पठाउ (R)
+resendVerificationEmail.accessKey = R
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
+reconnectDescription = फेर सँ कनेक्ट करू %S
 
+forgetMigration.label = बिसरि गेलहुँ (F)
+forgetMigration.accessKey = F
 
+unlinkMigration.label = सिंक हटाबू (l)
+unlinkMigration.accessKey = l
 
+unlinkVerificationTitle = सिंक केर पुरान संस्करण केँ अनलिंक करू?
+unlinkVerificationDescription = जँ अहाँ सिंक उन्नयन केर संबंधमे नहि याद पारनाय चाहैत छी, अहाँ अपन पुरान सिंक खाता एकरा हटाबै कलेल अनलिंक कए सकैत छी.
 unlinkVerificationConfirm = कड़ीविहीन करू
 
 # These strings are used in a dialog we display after the user requests we resend
@@ -29,4 +42,8 @@ unlinkVerificationConfirm = कड़ीविहीन करू
 verificationSentTitle = सत्यापन भेजल गेल
 # LOCALIZATION NOTE (verificationSentHeading) - %S = Email address of user's Firefox Account
 verificationSentHeading = जाँच कड़ी %S पर भेजल गेल अछि
+verificationSentDescription = अपन ईमेल जाँचू आओर सिंक्रनाइज़ शुरू करए कलेल लिंक पर क्लिक करू.
 
+verificationNotSentTitle = सत्यापन पठाबैमे असमर्थ
+verificationNotSentHeading = हम अखन सत्यापन मेल पठाबैमे असमर्थ छी
+verificationNotSentDescription = बादमे फिनु कोसिस करू.
