[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/devtools/markers.properties
+++ b/ach/browser/chrome/browser/devtools/markers.properties
@@ -72,3 +72,4 @@ marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
+marker.gcreason.description.DOM_WORKER=Latic pe obedo katic pi kare ma lalac.
