--- a/ach/browser/chrome/browser/devtools/performance.properties
+++ b/ach/browser/chrome/browser/devtools/performance.properties
@@ -125,6 +125,7 @@ table.zoom.tooltiptext=Ngi pem i dirica matidi manyen
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Gwok mak…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
