--- a/ach/toolkit/chrome/global/aboutServiceWorkers.properties
+++ b/ach/toolkit/chrome/global/aboutServiceWorkers.properties
@@ -2,11 +2,13 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+title = Kama oa iye: %S
 
 # LOCALIZATION NOTE: %1$S is brandShortName, %2$2 is the application ID, and $%$3 is true/false value.
 # LOCALIZATION NOTE: the term "InBrowserElement" should not be translated
 b2gtitle = %1$S ID pa purugram %2$S - InBrowserElement %3$S
 
+scope = Kabedo ma orumo:
 
 
 # LOCALIZATION NOTE: the term "Worker" should not be translated.
@@ -26,3 +28,4 @@ waiting = Kuro…
 
 # LOCALIZATION NOTE: the term "Service Worker" should not translated.
 
+pushEndpoint = Agiki me coro:
