--- a/ach/toolkit/chrome/global/aboutWebrtc.properties
+++ b/ach/toolkit/chrome/global/aboutWebrtc.properties
@@ -17,6 +17,7 @@
 
 # LOCALIZATION NOTE (debug_mode_on_state_msg):
 # %1$S will be replaced by the full path file name of the debug log.
+debug_mode_on_state_msg = tye i kit me nongo bal, loke nonge i: %1$S
 
 # LOCALIZATION NOTE (aec_logging_msg_label, aec_logging_off_state_label,
 # aec_logging_on_state_label, aec_logging_on_state_msg):
@@ -33,6 +34,9 @@
 # LOCALIZATION NOTE (sdp_heading, local_sdp_heading, remote_sdp_heading):
 # "SDP" is an abbreviation for Session Description Protocol, an IETF standard.
 # See http://wikipedia.org/wiki/Session_Description_Protocol
+sdp_heading = SDP
+local_sdp_heading = SDP ma gang
+remote_sdp_heading = SDP me kama bor
 
 # LOCALIZATION NOTE (rtp_stats_heading): "RTP" is an abbreviation for the
 # Real-time Transport Protocol, an IETF specification, and should not
@@ -74,8 +78,11 @@ debug_mode_msg_label = Kit me nong bal
 debug_mode_off_state_label = Cak kit me nongo bal
 debug_mode_on_state_label = Juk kit me nongo bal
 connection_closed = kiloro
+priority = Pire tek
 fold_show_msg = Nyut kore ki kore
+fold_show_hint = Dii me yaro bute man
 fold_hide_msg = Kan kore ki kore
+fold_hide_hint = dii me jwiko bute man
 received_label = Kigamo
 packets = paket
 lost_label = Orweny
